@@ -24,26 +24,32 @@ describe Object, "#should" do
   it "should raise error if it receives false directly" do
     lambda {
       @target.should false
-    }.should raise_error(NoMethodError)
+    }.should raise_error(Spec::Expectations::InvalidMatcherError)
   end
   
   it "should raise error if it receives false (evaluated)" do
     lambda {
       @target.should eql?("foo")
-    }.should raise_error(NoMethodError)
+    }.should raise_error(Spec::Expectations::InvalidMatcherError)
   end
   
   it "should raise error if it receives true" do
     lambda {
       @target.should true
-    }.should raise_error(NoMethodError)
+    }.should raise_error(Spec::Expectations::InvalidMatcherError)
   end
   
   it "should raise error if it receives nil" do
-    pending("refactor the should method to handle this")
     lambda {
       @target.should nil
-    }.should raise_error(NoMethodError)
+    }.should raise_error(Spec::Expectations::InvalidMatcherError)
+  end
+
+  it "should raise error if it receives no argument and it is not used as a left side of an operator" do
+    pending "Is it even possible to catch this?"
+    lambda {
+      @target.should
+    }.should raise_error(Spec::Expectations::InvalidMatcherError)
   end
 end
 
@@ -71,25 +77,31 @@ describe Object, "#should_not" do
   it "should raise error if it receives false directly" do
     lambda {
       @target.should_not false
-    }.should raise_error
+    }.should raise_error(Spec::Expectations::InvalidMatcherError)
   end
   
   it "should raise error if it receives false (evaluated)" do
     lambda {
       @target.should_not eql?("foo")
-    }.should raise_error
+    }.should raise_error(Spec::Expectations::InvalidMatcherError)
   end
   
   it "should raise error if it receives true" do
     lambda {
       @target.should_not true
-    }.should raise_error
+    }.should raise_error(Spec::Expectations::InvalidMatcherError)
   end
 
   it "should raise error if it receives nil" do
-    pending("refactor the should_not method to handle this")
     lambda {
       @target.should_not nil
-    }.should raise_error
+    }.should raise_error(Spec::Expectations::InvalidMatcherError)
+  end
+
+  it "should raise error if it receives no argument and it is not used as a left side of an operator" do
+    pending "Is it even possible to catch this?"
+    lambda {
+      @target.should_not
+    }.should raise_error(Spec::Expectations::InvalidMatcherError)
   end
 end
